# brunch

./: .gitignore  DESIGN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  initial-design.md
docs-site/: index.md  recording.md
docs-site/assets/casts/: 00-setup.cast  01-create.cast  02-inspect.cast  03-claude-code.cast  04-verify.cast  05-commit.cast  06-push.cast  07-pr.cast  08-teardown.cast
docs-site/ref/: getting-started.md  initial-design.md
docs-site/scripts/: asciinema-init.js
docs-site/stylesheets/: extra.css
docs-site/walkthrough/: 00-setup.md  01-create.md  02-inspect.md  03-claude-code.md  04-verify.md  05-commit.md  06-push.md  07-pr.md  08-teardown.md  index.md
docs/examples/templates/: README.md  kybernetix-billing.toml  kybernetix-data-pipeline.toml  kybernetix-fullstack.toml  kybernetix-platform-ops.toml
scripts/: install-asciinema.sh  record-walkthrough.sh
src/brunch/: __main__.py  archive.py  cli.py  config.py  errors.py  git.py  manifest.py  models.py  paths.py  rendering.py  templates.py
src/brunch/commands/: __init__.py  add.py  adopt.py  fetch.py  foreach.py  fsck.py  init.py  pull.py  rebase.py  rm.py  status.py  sync.py
src/brunch/services/: add.py  adopt.py  fetch.py  foreach.py  fsck.py  init.py  pull.py  rebase.py  rm.py  set_ops.py  status.py  sync.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_adopt_e2e.py  test_fsck_e2e.py  test_init_add_sync_e2e.py  test_m3_e2e.py  test_rm_e2e.py  test_rm_safety_e2e.py  test_set_mode_e2e.py  test_status_e2e.py
tests/unit/: test_archive.py  test_config.py  test_git.py  test_manifest.py  test_paths.py  test_rendering.py  test_services_add.py  test_services_adopt.py  test_services_fetch.py  test_services_foreach.py  test_services_fsck.py  test_services_init.py  test_services_pull.py  test_services_rebase.py  test_services_rm.py  test_services_rm_safety.py  test_services_status.py  test_services_sync.py  test_templates.py
