[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brunch"
description = "Mise en place for git worktree-based multi-repo task workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "htzv" }]
keywords = ["git", "worktree", "cli", "monorepo", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "tomli-w>=1.0",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.scripts]
brunch = "brunch.cli:app"
br = "brunch.cli:app"

[project.urls]
# Placeholder until the repo finds its public home.
Homepage = "https://example.invalid/brunch"

[tool.hatch.version]
path = "src/brunch/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/brunch"]

# --- uv ---------------------------------------------------------------------
#
# A 48-hour rolling cooldown on newly-published packages. Anything uploaded to
# the index in the last two days is invisible to `uv lock`, so a compromised
# or malicious release that's revoked within the typical detection window
# never enters our lockfile.
#
# This is a rolling delta (not a fixed date): uv recomputes the cutoff at
# every invocation. It does not affect already-locked versions in uv.lock —
# only the resolution that produces them.
[tool.uv]
exclude-newer = "48 hours"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "RUF",           # ruff-specific
]

# B008 ("don't call functions in argument defaults") doesn't fit Typer's
# parameter declaration idiom, which is the only way to declare CLI options
# in this codebase. Suppress it inside command controllers.
[tool.ruff.lint.per-file-ignores]
"src/brunch/commands/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["brunch"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
